# jivelite

./: .travis.yml  LICENSE  Makefile  Makefile.osx  Makefile.solaris  Makefile.x86_64  README.md  jivelite.sln  jivelite.vcproj  meson.build
debian/: changelog  control  jivelite.substvars  rules
lib-src/: Makefile  Makefile.osx  Makefile.solaris  Makefile.x86_64
lib-src/lua-cjson-2.1.0/: Makefile  Makefile.solaris  cjson.def  cjson.vcproj  dtoa.c  lua-cjson.sln  lua_cjson.c  strbuf.h
lib-src/luaexpat-1.2.0/: Makefile.solaris  README  config  config.solaris  makefile
lib-src/luafilesystem-1.6.2/: Makefile.solaris  config  config.solaris
lib-src/luamd5/: Makefile  Makefile.solaris  lmd5.c  lmd5.h
lib-src/luasocket-2.0.2/: config  (+7 more)
patches/: SDL-1.2.15.patch  jivelite-lua-5.1.README  jivelite-lua-5.1.patch
scripts/: buildosxdmg  buildosxtarfile  buildwinzipfile  jivelite-s10-pkg  lua-add-bitop-shared.patch  remove-ffi.patch  use-lnx-sp-libs.patch
share/: meson.build
src/: Makefile  Makefile.osx  Makefile.solaris  Makefile.x86_64  common.h  jive.c  jive.h  jive_debug.c  jive_dns.c  jive_event.c  jive_font.c  jive_framework.c  jive_group.c  jive_icon.c  jive_label.c  jive_menu.c  jive_slider.c  jive_style.c  jive_surface.c  jive_textarea.c  jive_textinput.c  jive_utils.c  jive_widget.c  jive_window.c  jivelite.rc  log.c  log.h  meson.build  platform_linux.c  platform_osx.c  platform_solaris.c  platform_windows.c  resize.c  resource.h  system.c  types.h  version.h
src/visualizer/: Makefile  kiss_fft.h  spectrum.c  visualizer.c  visualizer.h  vumeter.c
(+250 files in other folders)
